; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ah_output.c_ah_hdrsiz.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ah_output.c_ah_hdrsiz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipsecrequest = type { %struct.TYPE_4__*, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i64, i32, i32 }
%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [29 x i8] c"ah_hdrsiz: NULL was passed.\0A\00", align 1
@IPPROTO_AH = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [37 x i8] c"unsupported mode passed to ah_hdrsiz\00", align 1
@SADB_SASTATE_DYING = common dso_local global i64 0, align 8
@SADB_SASTATE_MATURE = common dso_local global i64 0, align 8
@SADB_X_EXT_OLD = common dso_local global i32 0, align 4
@sadb_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ah_hdrsiz(%struct.ipsecrequest* %0) #0 {
  %2 = alloca %struct.ipsecrequest*, align 8
  store %struct.ipsecrequest* %0, %struct.ipsecrequest** %2, align 8
  %3 = load %struct.ipsecrequest*, %struct.ipsecrequest** %2, align 8
  %4 = icmp eq %struct.ipsecrequest* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = call i32 @panic(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %7

7:                                                ; preds = %5, %1
  %8 = load %struct.ipsecrequest*, %struct.ipsecrequest** %2, align 8
  %9 = getelementptr inbounds %struct.ipsecrequest, %struct.ipsecrequest* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @IPPROTO_AH, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %7
  %15 = call i32 @panic(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %7
  ret i64 20
}

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
